manifests/authentik/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server
  labels:
    app.kubernetes.io/name: "authentik"
spec:
  hostnames:
    - auth.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: "/"
