manifests/authentik/base/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  labels:
    app.kubernetes.io/name: "authentik"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/component: server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/component: server
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: server
          image: ghcr.io/goauthentik/server:2026.5.5
          imagePullPolicy: IfNotPresent
          args:
            - server
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: '/-/health/live/'
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: '/-/health/ready/'
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: '/-/health/live/'
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: "authentik"
                    app.kubernetes.io/component: server
                topologyKey: kubernetes.io/hostname
      enableServiceLinks: true

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/component: worker
    spec:
      serviceAccountName: authentik
      terminationGracePeriodSeconds: 30
      containers:
        - name: worker
          image: ghcr.io/goauthentik/server:2026.5.5
          imagePullPolicy: IfNotPresent
          args:
            - worker
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - ak
              - healthcheck
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command:
              - ak
              - healthcheck
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          startupProbe:
            exec:
              command:
              - ak
              - healthcheck
            failureThreshold: 60
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: "authentik"
                    app.kubernetes.io/component: worker
                topologyKey: kubernetes.io/hostname
      enableServiceLinks: true

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server
  labels:
    app.kubernetes.io/name: "authentik"
spec:
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: authentik-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: '/'
